<resources>
    <string name="app_name">Mboehao</string>
    <string name="parse_server_url">https://testing.sodep.com.py/parse</string>
    <string name="parse_app_id">DqiNAD6RDWT</string>
    <string name="remembercredentials">Remember Credentials?</string>
    <string name="dataSaved">Choose your image!</string>
    <string name="dataHint">Note Description</string>
    <string name="title">Title</string>
    <string name="imageViewTitle">User Image</string>
    <string name="saveButton">Save</string>
    <string name="selectImage">What image you want for your profile?</string>
    <string name="logo_description">icon</string>
    <string name="test_drawer">test</string>
    <string name="about_image">about_imagen</string>
    <string name="action_logout">Sign Out</string>
    <string name="line_chart">LineChart</string>
    <string name="bar_chart">BarChart</string>
    <string name="horizontal_bar_chart">HorizontalBarChart</string>
    <string name="share_label">Compartir</string>
    <string name="bad_credentials">Usuario y/o clave son incorrectas</string>
    <string name="trophy_gallery">Palmarés</string>
    <string name="parent_charts">Charts</string>
    <string name="parent_options">Options</string>
    <string name="navigation_drawer_open">Abrir barra de navegación</string>
    <string name="navigation_drawer_close">Cerrar barra de navegación</string>
    <string name="refresh_label">Refresh</string>
    <string name="back_label">Back</string>
    <string name="MediaWiki">Mbo`ehao Proyect</string>
    <string name="loading_web_page">Cargando desde la web...</string>
    <string name="urlWiki">https://joko.miraheze.org/wiki/Mbo%60ehao</string>
    <string name="errorLoadingPage">Error cargando la página</string>
    <string name="changePasswordDescription">Change Password</string>
    <string name="button_save">Save</string>
    <string name="button_back">Back</string>
    <string name="settings_password2">Rewrite Password</string>
    <string name="settings_password">New Password</string>
    <string name="current_password">Current Password</string>
    <string name="current_password_warning">Enter your current Password</string>
    <string name="change_password_error">Couldn´t save Password</string>
    <string name="change_password_success">Password successfully changed !</string>
    <string name="settings_pwd_equal">New passwords are equal</string>
    <string name="settings_pwd_not_equal">New passwords are not equal</string>
    <string name="settings_pwd_too_short">New password must have at least 8 characters</string>
    <string name="eula_warning_body">Ud. no aceptó aún los términos de uso de la aplicación. Por favor lea hasta el final y marque la casilla de aceptación si está de acuerdo con las condiciones</string>
    <string name="eula_warning_title"></string>
    <string name="eula_title">Aviso Legal de Responsabilidades</string>
    <string name="eula_checkbox">I Accept the terms and Conditions</string>
    <string name="eula_body">El uso de esta aplicación es completamente voluntario por parte del usuario. El usuario tiene derecho a dejar de usarla en cualquier momento que lo desee y sin que esto perjudique ningún tipo de relación con el equipo de salud al que se encuentre vinculado o los investigadores.
        La aplicación pretende ser exclusivamente una herramienta complementaria de ayuda para los pacientes con trastorno bipolar y en ningún momento deberá reemplazar la supervisión estrecha de un profesional de la salud mental de manera continua. Los usuarios tienen la responsabilidad personal de seguir recibiendo su tratamiento y seguimiento psiquiátrico, psicológico y médico de forma rutinaria. Los investigadores y autores de la aplicación no proveerán ningún tipo de consejo personalizado ni asesoramiento sobre el tratamiento psiquiátrico, psicológico o médico del usuario. Ante cualquier sintomatología, molestia o duda el paciente deberá consultar con su psiquiatra o psicólogo de referencia más allá de lo que la aplicación pueda aconsejar. Por tanto, los autores no se responsabilizan de ninguna consecuencia ni desenlace que tenga que ver o se derive del uso de esta aplicación.
        En caso de presentar sintomatología de reciente inicio o urgente, el paciente debería acudir a su centro sanitario más cercano para la evaluación y tratamiento que correspondan por un profesional de la salud mental. Si bien la aplicación en caso de que se detecte sintomatología sugerente de cierta gravedad facilita el contacto con los servicios de urgencias y/o referentes, es responsabilidad del paciente contactar y acudir a los mismos. Debido a la complejidad del trastorno y las características individuales de cada persona, la aplicación no está diseñada para diagnosticar o tratar este tipo de situaciones, por lo cual es imposible garantizar una fiabilidad del 100%.
        Así mismo, la aplicación NO se encuentra diseñada para diagnosticar ni tratar ningún tipo de enfermedad orgánica o mental por sí sola, sino más bien como un complemento al tratamiento estándar indicado por el profesional de la salud encargado del cuidado del usuario.
        Los datos recogidos por la aplicación se encuentran codificados a través de un número aleatorio único para cada usuario. Sin embargo, si el usuario revelara o perdiera su número de identificación o contraseña la privacidad se podría ver comprometida, en cuyo caso se debe notificar de inmediato a los investigadores para anular la cuenta. Sin embargo, ya que esto escapa a las posibilidades de los desarrolladores y autores de la aplicación, este tipo de incidentes no son responsabilidad de los mismos. Esto se ajusta a la Ley orgánica 15/1999 de protección de datos española, y deberá ser contemplada de forma independiente en cada caso en particular en la que esta aplicación sea utilizada, lo cual escapa a la responsabilidad de los autores. Es recomendable mantener protegido su dispositivo móvil con algún tipo de código, patrón o huella dactilar para evitar situaciones de compromiso de la información contenida en la aplicación. Si bien esto es responsabilidad exclusiva del usuario.
        El equipo de investigación se compromete por principios éticos y legales que no usará o revelará ningún tipo de información sobre el usuario. De la misma manera nunca se utilizará información personal para enviar información no solicitado o "spam"; y bajo ninguna circunstancia sus datos personales, su email, su nombre de usuario o los datos de su navegador será revelado, compartido o transferido a terceros.
        Los autores de la aplicación garantizan todos los medios de seguridad disponibles para la transmisión segura de los datos que son almacenados en un servidor seguro, encriptado y restringido al acceso público, al cual tienen exclusivo acceso sólo los investigadores. Estos datos serán utilizados exclusivamente con fines científicos, en ningún momento serán difundidos a ningún tipo de medio y serán sólo analizados de forma global en los trabajos de difusión científica que se publiquen o deriven de los estudios que utilicen esta aplicación, sin considerar ni un caso en particular que pueda poner en riesgo la privacidad o de-identificación de ningún usuario.
        La aplicación se encuentra registrada y patentada por en las instancias correspondientes, por lo que queda terminantemente prohibida su reproducción total o parcial, como también cualquier difusión de su contenido en cualquier medio no autorizado.
        La distribución y uso de la aplicación es siempre gratuita, por lo que los autores no se responsabilizan de cualquier tipo de comercialización por parte de terceras personas no autorizadas ni vinculadas a los autores o investigadores.
        Al hacer click en la casilla más abajo, el usuario declara entender y aceptar las condiciones anteriormente detalladas para el uso de la aplicación. De lo contrario la aplicación se cerrará y no podrá ser utilizada.</string>
    <string name="button_accept">Accept</string>
    <string name="button_cancel">Cancelar</string>
    <string name="continue_button">Continue</string>
    <string name="security_dialog_body">Por ahora la aplicación NO almacenará datos personales del usuario, aun asi recuerde SIEMPRE utilizar alguna medida de seguridad para bloquear su dispositivo móvil</string>
    <string name="security_dialog_title">Data Proteccion</string>
    <string name="chart_description">Joko</string>
    <string name="subfolder">"MPAndroidChart-Library Save"</string>
    <string name="notification_message">Just to tell you we are here.</string>
    <string name="notification_title">Hello, this is Mboehao !!</string>
    <string name="easter_egg_msg">This is our Easter-egg on the app!!!</string>
    <string name="aboutDescription">About</string>
    <string name="version_number">v1.0</string>
    <string name="version_name">v1.0.7</string>
    <string name="msg_token_fmt">FCM Token</string>
    <string name="preferences">Preferences</string>
    <string name="pref_title_new_message_notifications">Allow Notifications</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="choose_time">Choose Time Notificacion</string>
    <string name="pref_title_time">Time Selector</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact         based on your message history</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Snow</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_general">General</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>
    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="multi_select_list_preference_default_value" />
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="dummyHostname">http://localhost\\</string>
    <string name="defaultSwitchMessage">Sin entrada</string>
    <string name="mistakeToSignIn">Usuario y/o clave son incorrectas</string>
    <string name="error_field_required">Campo Obligatorio</string>
    <string name="error_invalid_password">La contraseña debe tener como minimo 4 dígitos</string>
    <string name="error_incorrect_credentials">Credenciales incorrectas</string>
    <string name="no_network_connection">Sin conexión a Internet. Mboehao necesita una conexión a internet.</string>
    <string name="facebook_app_id">1991419877802660</string>
</resources>