<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rootPasswordDialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="#2B2525"
        android:gravity="center_vertical"
        android:paddingStart="15dp"
        android:paddingEnd="15dp">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/cancel_change_password"
            android:layout_width="35dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:background="@android:color/white"
            android:backgroundTint="@android:color/white"
            android:clickable="true"
            android:src="@drawable/back_button"
            android:focusable="true" />

    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_gravity="center"
        android:fontFamily="@font/os_semibold"
        android:hint="@string/current_password"
        android:layout_marginTop="20dp"
        app:passwordToggleEnabled="true"
        android:textSize="18sp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:id="@+id/EditTextCurrentPassword">

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_gravity="center"
        android:fontFamily="@font/os_semibold"
        android:hint="@string/settings_password"
        android:layout_marginTop="10dp"
        app:passwordToggleEnabled="true"
        android:textSize="18sp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:id="@+id/EditText_Pwd1">

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_gravity="center"
        android:fontFamily="@font/os_semibold"
        android:hint="@string/rewrite_password"
        android:layout_marginTop="10dp"
        app:passwordToggleEnabled="true"
        android:textSize="18sp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:id="@+id/EditText_Pwd2">

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/TextView_PwdProblem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/os_semibold"
        android:gravity="center" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/save_change_password"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_marginStart="155dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="156dp"
            android:layout_marginBottom="255dp"
            android:fontFamily="@font/open_sans_bold"
            android:text="@string/button_save"
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>